--- a/src/modules/navigation/navigation.css
+++ b/src/modules/navigation/navigation.css
@@ -286,6 +286,7 @@
   transform: translate(0, -50%);
 
   @media (--lg) {
+    margin-top: 10px;
     right: 58px;
   }
 }
